# Warszawskie_dane_rowerowe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  aktualizacje.md  flake.nix  generate_diff.py  justfile  latestDiff.geojson  lefthook.yml  osm_diff.py  osm_diff_test.py  pyproject.toml  requirements.in  requirements.txt  shell.nix
osm_diffs/: Baranow.geojson  Bemowo.geojson  Bialoleka.geojson  Białołęka.geojson  Bielany.geojson  Ceglow.geojson  Czosnow.geojson  Dobre.geojson  Gora-Kalwaria.geojson  Halinow.geojson  Izabelin.geojson  Jablonna.geojson  Jabłonna.geojson  Jadow.geojson  Jakubow.geojson  Jozefow.geojson  Józefów.geojson  Kaluszyn.geojson  Kampinos.geojson  Klembow.geojson  Kobylka.geojson  Kolbiel.geojson  Konstancin-Jeziorna.geojson  Legionowo.geojson  Leszno.geojson  Lesznowola.geojson  Lomianki.geojson  Minsk-Mazowiecki.geojson  Mokotow.geojson  Mokotów.geojson  Mrozy.geojson  Nadarzyn.geojson  Nasielsk.geojson  Nieporet.geojson  Nieporęt.geojson  Nowy-Dwor-Mazowiecki.geojson  Otwock.geojson  Piaseczno.geojson  Piastów.geojson  Praga-Polnoc.geojson  (+38 more)
rowery_wawa/: Warszawa-Okolice.dbf  Warszawa-Okolice.sbn  Warszawa-Okolice.sbx  Warszawa-Okolice.shp  Warszawa-Okolice.shp.xml  Warszawa-Okolice.shx  Warszawa.sbn  Warszawa.sbx  Warszawa.shp  Warszawa.shp.xml  Warszawa.shx  rowery.dbf  rowery.prj  rowery.sbn  rowery.sbx  rowery.shp  rowery.shp.xml  rowery.shx  rowery_towerowe.dbf  rowery_towerowe.prj  rowery_towerowe.sbn  rowery_towerowe.sbx  rowery_towerowe.shp  rowery_towerowe.shp.xml  rowery_towerowe.shx  (+5 more)
